--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
     "prop-type": "^0.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uniqid": "^5.4.0",
