--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-todo-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Baroka-wp.github.io/repository-name",
+  "homepage": "https://Baroka-wp.github.io/react-todo-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
